--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!--────────────────Header───────────────-->
 	<header>
 		<a class="logo" href="#home">
-              <img src="SA-logos__white.png" alt="repl logo" />
+              <img src="SA-logos__white.png" alt="sa logo" />
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
@@ -62,32 +62,32 @@
 		  <div class="work">
 		<!--───────────────card───────────────-->
 			<div class="card">
-			    <img class="work-img" src="https://img.freepik.com/free-photo/ai-biometric-technology-fingerprint-cyber-security_53876-129782.jpg?w=740&t=st=1673883977~exp=1673884577~hmac=4c2a2203126e5daaccaf599066d9315a7f585f7819e25a2dd0f8c7232a5c3d46">
+			    <img class="work-img" src="https://img.freepik.com/free-photo/ai-biometric-technology-fingerprint-cyber-security_53876-129782.jpg?w=740&t=st=1673883977~exp=1673884577~hmac=4c2a2203126e5daaccaf599066d9315a7f585f7819e25a2dd0f8c7232a5c3d46" alt="python">
 			    <a href="https://wikipedia.org/wiki/Artificial_intelligence" target="_blank"> <!--Link to project-->
 				<div class="work-content">AI Development - Python</div></a>
             </div>
 			<div class="card">
-			    <img class="work-img" src="https://img.freepik.com/free-vector/hand-drawn-web-developers_23-2148819604.jpg?w=740&t=st=1673884151~exp=1673884751~hmac=42554952a84a1659def5cca07d431fdc4382aa0cbf69c82b54f22ecca72dbd36">
+			    <img class="work-img" src="https://img.freepik.com/free-vector/hand-drawn-web-developers_23-2148819604.jpg?w=740&t=st=1673884151~exp=1673884751~hmac=42554952a84a1659def5cca07d431fdc4382aa0cbf69c82b54f22ecca72dbd36" alt="web development">
 				<a href="https://en.m.wikipedia.org/wiki/Web_developer" target="_blank"> <!--Link to project-->
 				<div class="work-content">Web Development - HTML, CSS, JS, PHP.</div></a>
             </div>
             <div class="card">
-			    <img class="work-img" src="https://img.freepik.com/free-vector/video-game-developer-concept-illustration_114360-5976.jpg?w=740&t=st=1673884368~exp=1673884968~hmac=d421fb9dd004384c7e7b024da4750d15e82f87e3a179b97dc2c46194b26912c5">
+			    <img class="work-img" src="https://img.freepik.com/free-vector/video-game-developer-concept-illustration_114360-5976.jpg?w=740&t=st=1673884368~exp=1673884968~hmac=d421fb9dd004384c7e7b024da4750d15e82f87e3a179b97dc2c46194b26912c5" alt="game development">
 				<a href="https://en.m.wikipedia.org/wiki/Video_game_developer" target="_blank"> <!--Link to project-->
 				<div class="work-content">Game Development - Unity C#.</div></a>
             </div>
             <div class="card">
-			    <img class="work-img" src="https://img.freepik.com/free-vector/app-development-illustration_52683-47931.jpg?w=740&t=st=1673884487~exp=1673885087~hmac=e8bf22998e6dee6950e5e9ca837140c26577d3d5c5e210f89935d00c664075f4">
+			    <img class="work-img" src="https://img.freepik.com/free-vector/app-development-illustration_52683-47931.jpg?w=740&t=st=1673884487~exp=1673885087~hmac=e8bf22998e6dee6950e5e9ca837140c26577d3d5c5e210f89935d00c664075f4" alt="Android_software_development">
 				<a href="https://en.m.wikipedia.org/wiki/Android_software_development" target="_blank"> <!--Link to project-->
 				<div class="work-content">Android Development - Java.</div></a>
             </div> 
 			<div class="card">
-			    <img class="work-img" src="https://img.freepik.com/free-vector/isometric-cms-concept_23-2148807389.jpg?w=740&t=st=1673884632~exp=1673885232~hmac=d99e9588e227702869030d369fb0dbea02327e17970f78caee0b26a29600f723">
+			    <img class="work-img" src="https://img.freepik.com/free-vector/isometric-cms-concept_23-2148807389.jpg?w=740&t=st=1673884632~exp=1673885232~hmac=d99e9588e227702869030d369fb0dbea02327e17970f78caee0b26a29600f723"alt="WordPress">
 				<a href="https://en.m.wikipedia.org/wiki/WordPress#WordPress_Foundation" target="_blank"> <!--Link to project-->
 				<div class="work-content">Wordpress Development.</div></a>
             </div>
 			<div class="card">
-			    <img class="work-img" src="https://img.freepik.com/free-vector/laptop-with-program-code-isometric-icon-software-development-programming-applications-dark-neon_39422-971.jpg?w=740&t=st=1673884729~exp=1673885329~hmac=6fc96694f7dbbad49ead810abd9dfbeaf57af07503f8f8636af56941d06c1704">
+			    <img class="work-img" src="https://img.freepik.com/free-vector/laptop-with-program-code-isometric-icon-software-development-programming-applications-dark-neon_39422-971.jpg?w=740&t=st=1673884729~exp=1673885329~hmac=6fc96694f7dbbad49ead810abd9dfbeaf57af07503f8f8636af56941d06c1704" alt="Programming_language">
 				<a href="https://en.m.wikipedia.org/wiki/Programming_language" target="_blank"> <!--Link to project-->
 				<div class="work-content">Languages like: Golang, SQL etc.</div></a>
             </div> 	  
