--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       <title>Sandesh Aryal</title>
       <link href="style.css" rel="stylesheet" type="text/css" async />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" async>
-      <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Repl.it_logo.svg/220px-Repl.it_logo.png" async>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" async></script>
+  <!--    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Repl.it_logo.svg/220px-Repl.it_logo.png" async> -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="script.js" async></script>
   </head>
     <body>
