--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
       <title>Sandesh Aryal</title>
-      <link href="style.css" rel="stylesheet" type="text/css" async />
+      <link href="style.css" rel="stylesheet" type="text/css"/>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" async>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" async></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="script.js" ></script>
   </head>
     <body>
